--- a/src/test/java/com/example/test/SearchEngine.html
+++ b/src/test/java/com/example/test/SearchEngine.html
@@ -10,12 +10,12 @@
 
     <div class="example">
 
-		<h3>Google</h3>
+		<h3>thesaurus.com</h3>
 		
         <p>
-            When user searches for <b concordion:set="#word">Awesome</b>,
-            the first result will:
-            <b concordion:assertEquals="searchFor(#word)">Awesome | Define Awesome at Dictionary.com</b>
+            When user searches for <b concordion:set="#word">awesome</b>,
+            the first Synonym result will:
+            <b concordion:assertEquals="searchFor(#word)">beautiful</b>
         </p>
         
     </div>
